fix #295121: crazy behaviour of the colorLabel
Rewrite ColorLabel to be a child of QPushButton instead of QFrame. The reason is that QFrame doesn't implement MouseClickEvent. That led to the issues when opening the colour picker widget on mousePressEvent.

I have to move `Awl::ColorLabel` `else if` statement checks above the `QPushButton` ones, because the latter set incorrect connects for the `ColorLabel` which inherits `QPushButton` now.

--- a/mscore/editstaff.ui
+++ b/mscore/editstaff.ui
@@ -97,9 +97,6 @@
             <property name="focusPolicy">
              <enum>Qt::TabFocus</enum>
             </property>
-            <property name="frameShape">
-             <enum>QFrame::Box</enum>
-            </property>
            </widget>
           </item>
          </layout>
@@ -923,7 +920,7 @@
  <customwidgets>
   <customwidget>
    <class>Awl::ColorLabel</class>
-   <extends>QFrame</extends>
+   <extends>QPushButton</extends>
    <header>awl/colorlabel.h</header>
    <container>1</container>
   </customwidget>
