--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -10202,9 +10202,6 @@
                  </property>
                  <item row="0" column="1">
                   <widget class="Awl::ColorLabel" name="textStyleFrameForeground">
-                   <property name="frameShape">
-                    <enum>QFrame::Box</enum>
-                   </property>
                   </widget>
                  </item>
                  <item row="2" column="0">
@@ -10291,9 +10288,6 @@
                  </item>
                  <item row="1" column="1">
                   <widget class="Awl::ColorLabel" name="textStyleFrameBackground">
-                   <property name="frameShape">
-                    <enum>QFrame::Box</enum>
-                   </property>
                   </widget>
                  </item>
                  <item row="3" column="2">
@@ -10355,9 +10349,6 @@
            </item>
            <item row="6" column="1">
             <widget class="Awl::ColorLabel" name="textStyleColor">
-             <property name="frameShape">
-              <enum>QFrame::Box</enum>
-             </property>
             </widget>
            </item>
            <item row="7" column="1">
@@ -10519,7 +10510,7 @@
  <customwidgets>
   <customwidget>
    <class>Awl::ColorLabel</class>
-   <extends>QFrame</extends>
+   <extends>QPushButton</extends>
    <header>awl/colorlabel.h</header>
    <container>1</container>
   </customwidget>
