--- a/mscore/mixerdetails.ui
+++ b/mscore/mixerdetails.ui
@@ -522,7 +522,7 @@
  <customwidgets>
   <customwidget>
    <class>Awl::ColorLabel</class>
-   <extends>QFrame</extends>
+   <extends>QPushButton</extends>
    <header>awl/colorlabel.h</header>
    <container>1</container>
   </customwidget>
